--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <th></th>
       <td></td>
       <td></td>
-      <td><a href="https://example.com/printf">printf</a></td>
+      <td><a href="https://github.com/gurugurufire/test/blob/main/printf_詳細情報.html">printf</a></td>
       <td>int printf(const char *format, ...);</td>
       <td>フォーマットされた出力を行う</td>
     </tr>
